[package]
name = "factorial"
authors = ["Johan Philis"]
description = "A simple factorial calculator"
repository = "https://github.com/philis-johan/factorial"
license = "MIT"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.3"
num-traits = "0.2.15"
text_io = "0.1.12"
